# file-event-hub

./: .gitignore  README.md  pyproject.toml
hook/: post_tool_use.sh
src/file_event_hub/: __init__.py  cli.py  models.py  server.py  store.py
src/file_event_hub/hook/: post_tool_use.sh
static/: index.html
