[project]
name = "file-event-hub"
version = "0.1.0"
description = "A decoupled file change event bus for AI coding assistants"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
file-event-hub = "file_event_hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_event_hub"]
